# wowhead-item-roulette

./: .gitignore  Dockerfile  README.md  composer.json
app/: main.py  pyproject.toml
app/static/js/: main.js
app/static/js/modules/: CurrentItem.js  Wowhead.js
app/templates/: index.html
public/: index.php
public/css/: style.css
public/js/: WowheadRoulette.js
resources/views/: 400.php  500.php  roulette.php
src/: Config.php  Util.php
src/Controllers/: BaseController.php  ErrorController.php  RouletteController.php
tests/Unit/: UtilTest.php
wowhead_item_roulette/: pyproject.toml
wowhead_item_roulette/scripts/: docker-build  docker-remove  docker-start  docker-start-reload  docker-stop  install
wowhead_item_roulette/src/wowhead_item_roulette/: main.py  middleware.py  routes.py  settings.py  views.py
wowhead_item_roulette/statics/css/: style.css
wowhead_item_roulette/statics/js/: CurrentItem.js  NextItemButton.js  Wowhead.js  WowheadRoulette.js  main.js
wowhead_item_roulette/templates/: index.html
wowhead_item_roulette/tests/: test_wowhead_item_roulette.py
